fix overflow of main when overlay open

--- a/src/ui/invoice-action/invoice-action.module.scss
+++ b/src/ui/invoice-action/invoice-action.module.scss
@@ -4,12 +4,22 @@
 
 .action{
     background-color: var(--overlay-bkg);
-    padding-top: 2rem;
     max-width: 38.5rem;
+    display: flex;
+    flex-direction: column;
 
     @include mid{
         border-radius: 0 1.25rem 1.25rem 0;
-        padding: 3.6875rem 0 0 0;
+        max-height: calc(100vh - 4.5rem);
+        position: relative;
+    }
+
+    @include tablet{
+        max-height: calc(100vh - 5rem);
+    }
+
+    @include desktop{
+        max-height: 100vh;
     }
 
     &__title{
@@ -28,16 +38,21 @@
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.10) 100%);
 
         @include mid{
-            display: none;
+            position: absolute;
+            min-height: 12.5rem;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.50) 100%);
+            bottom: 3.4375rem;
         }
     }
 }
 
 .scroll{
-    padding: 0 1.5rem;
+    margin: 2rem 1.5rem 0;
 
     @include mid{
-        padding: 0 3.5rem;
+        max-height: calc(100% - 7rem);
+        margin: 3.6875rem 3.5rem 1rem;
+        overflow-y: auto;
     }
 }
 
@@ -355,6 +370,7 @@
     box-shadow: 0px 10px 10px -10px rgba(72, 84, 159, 0.10);
     padding: 1.3125rem 1.5rem 1.5rem 1.375rem;
     justify-content: space-between;
+    position: relative;
 
     @include mid{
         background-color: inherit;
@@ -362,7 +378,6 @@
         padding:  2rem 3.5rem;
         column-gap: 0.5rem;
         justify-content: flex-end;
-        margin-top: 3rem;
     }
 
     &__discard{
