--- a/src/ui/modal/modal.module.scss
+++ b/src/ui/modal/modal.module.scss
@@ -7,5 +7,5 @@
     left: 0;
     width: 100%;
     background-color: #00000080;
-    min-height: 100vh;
+    min-height: calc(100vh - 4.5rem);
 }
